# gpa

./: .gitignore  AUTHORS  ChangeLog  ChangeLog-2011  Makefile.am  NEWS  README  README-alpha  README.W32  THANKS  TODO  acconfig.h  acinclude.m4  autogen.rc  autogen.sh  configure.ac  configure.in  gpa.desktop  gpa.spec  gpadefs.h.in  gtkrc-1.2.gpa  gtkrc.gpa  to-utf8
build-aux/: git-log-footer
doc/: HACKING  Makefile.am  gpa.1
gpapa/: ChangeLog  Makefile  Makefile.am  README  build-dll  context.h  data.c  debug.c  gpapa.c  gpapa.def  gpapa.h  gpapafile.c  gpapafile.h  gpapaintern.c  gpapaintern.h  gpapakey.c  gpapakey.h  gpapapublickey.c  gpapapublickey.h  gpapasecretkey.c  gpapasecretkey.h  gpapasignature.c  gpapasignature.h  gpapatest.c  gpapatypedefs.h  gpgme.h  gpgme_io.h  gpgme_types.h  io.h  keyserver.c  keyserver.h  ops.h  posix-io.c  posix-sema.c  rungpg.c  rungpg.h  util.c  util.h  w32-clipboard.c  w32-io.c  (+1 more)
jnlib/: ChangeLog  Makefile.am  argparse.h  libjnlib-config.h  logging.c  stringhelp.c  stringhelp.h  xmalloc.c  xmalloc.h
m4/: ChangeLog  ChangeLog-2011  Makefile.am  check_zlib.m4
pixmaps/: ChangeLog  ChangeLog-2011  Makefile.am  blue_key.xpm  blue_yellow_cardkey.xpm  decrypt.xpm  delete.xpm  export.xpm  gpa_blue_key.xpm  gpa_logo.xpm  gpa_yellow_key.xpm  help.xpm  keyring.xpm  open_folder.xpm  openfile.xpm  smartcard.xpm
po/: ChangeLog  ChangeLog-2011  LINGUAS  Makevars  POTFILES.in  ar.po  cs.po  de.po  es.po  fr.po  ja.po  nl.po  pl.po  pt_BR.po  ru.po  se.po  sv.po  to-utf8  tr.po  zh_CN.po  zh_TW.Big5.po  zh_TW.po
src/: ChangeLog  ChangeLog-2011  Makefile.am  Signals  blue_yellow_cardkey.xpm  blue_yellow_key.xpm  brief.xpm  cardman.c  cardman.h  certchain.c  certchain.h  clipboard.c  clipboard.h  cm-dinsig.c  cm-dinsig.h  cm-geldkarte.c  cm-geldkarte.h  cm-netkey.c  cm-netkey.h  cm-object.c  cm-object.h  cm-openpgp.c  cm-openpgp.h  cm-piv.c  cm-piv.h  cm-unknown.c  cm-unknown.h  confdialog.c  confdialog.h  convert.c  convert.h  detailed.xpm  dndtest.c  dummy_gpapa.c  edit.xpm  encrypt.xpm  encryptdlg.c  encryptdlg.h  expirydlg.c  expirydlg.h  (+253 more)
st-fonts/: ChangeLog  ChangeLog-2011  README
